Add my design page

--- a/public/mydesign.html
+++ b/public/mydesign.html
@@ -4,15 +4,15 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width,initial-scale=1.0">
 <link rel="stylesheet" href="style.css">
-<title>Contact information</title>
+<title> developer fanwell Mawele</title>
 </head>
 <body>
    <header>
       <h1>Fanwell Mawele</h1>
-    <p>  IT student | Aspiring Full Stack Developer</p>
+    <p>  IT student |  Junior Full Stack Developer</p>
 </header>
    <section class="bio">
-      <h2  class="about">About Me</h2> Me</h2>
+   <h2> class="about">About Me</h2>
       <p> A passionate IT student interested in web development and full stack projects. I love building things that work and look nice.</p>
    </section>
    <section class="qualifications">
@@ -48,7 +48,7 @@
 <h2>Contact Me</h2>
    <p>phone: 0972043418</p>
         <p>Email:fanwelmawelejunior@gmail.com</p>
-            <p>GitHub: github.com/fanwell</p>
+            <p>GitHub: <a href="https://github.com/fanwelmawelejunior-gif">https://github.com/fanwelmawelejunior-gif</a></p>
     <form   class="contactform" id="contactForm"> 
      <input type="text" id="name" placeholder="Name" required>
         <input type="email" id="email" placeholder="Email" required>
