--- a/public/mydesign.html
+++ b/public/mydesign.html
@@ -12,7 +12,7 @@
     <p>  IT student |  Junior Full Stack Developer</p>
 </header>
    <section class="bio">
-   <h2> class="about">About Me</h2>
+   <h2>About Me</h2>
       <p> A passionate IT student interested in web development and full stack projects. I love building things that work and look nice.</p>
    </section>
    <section class="qualifications">
