--- a/public/mydesign.html
+++ b/public/mydesign.html
@@ -4,7 +4,7 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width,initial-scale=1.0">
 <link rel="stylesheet" href="style.css">
-<title> developer fanwell Mawele</title>
+<title> Fanwell Tech Labs</title>
 </head>
 <body>
    <header>
