--- a/public/contact.html
+++ b/public/contact.html
@@ -16,7 +16,7 @@
     </div>
 
     <nav class="menu" id="menu">
-        <a href="home.html">Home</a>
+        <a href="index.html">Home</a>
         <a href="services.html">Our Services</a>
         <a href="about.html">About Us</a>
         <a href="contact.html">Contact Us</a>
