added some scaling

--- a/public/about.html
+++ b/public/about.html
@@ -2,7 +2,8 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>About Us | My Portfolio</title>
+  <meta name="viewport" content="width=device-width,initial-scale=1.0">
+  <title>About Us|FanwellTech Labs</title>
   <link rel="stylesheet" href="style.css">
 </head>
  <header class="about-head">
