--- a/public/contact.html
+++ b/public/contact.html
@@ -51,11 +51,25 @@
     <i class="fas fa-phone"></i>
     <span>+260 966 056 238</span>
   </a>
-
   <a id="e-mail" href="mailto:fanwelltechlabs@gmail.com" class="contact-item">
     <i class="fas fa-envelope"></i>
-    <span >fanwelltechlabs@gmail.com</span>
+    <span >info@fanwelltechlabs.com</span>
   </a>
+   <a id="e-mail" href="mailto:fanwelltechlabs@gmail.com" class="contact-item">
+    <i class="fas fa-envelope"></i>
+    <span >contact@fanwelltechlabs.com</span>
+  </a>
+
+   <a id="e-mail" href="mailto:fanwelltechlabs@gmail.com" class="contact-item">
+    <i class="fas fa-envelope"></i>
+    <span >projects@fanwelltechlabs.com</span>
+  </a>
+
+   <a id="e-mail" href="mailto:fanwelltechlabs@gmail.com" class="contact-item">
+    <i class="fas fa-envelope"></i>
+    <span >support@fanwelltechlabs.com</span>
+  </a>
+
 
   <a id="web" href="https://fanwelltechlabs.com" target="_blank" class="contact-item">
     <i class="fas fa-globe"></i>
