--- a/public/index.html
+++ b/public/index.html
@@ -99,8 +99,24 @@ We combine creativity, structured engineering practices, and modern technologies
 
   <a id="e-mail" href="mailto:fanwelltechlabs@gmail.com" class="contact-item">
     <i class="fas fa-envelope"></i>
-    <span >fanwelltechlabs@gmail.com</span>
+    <span >info@fanwelltechlabs.com</span>
   </a>
+   <a id="e-mail" href="mailto:fanwelltechlabs@gmail.com" class="contact-item">
+    <i class="fas fa-envelope"></i>
+    <span >contact@fanwelltechlabs.com</span>
+  </a>
+
+   <a id="e-mail" href="mailto:fanwelltechlabs@gmail.com" class="contact-item">
+    <i class="fas fa-envelope"></i>
+    <span >projects@fanwelltechlabs.com</span>
+  </a>
+
+   <a id="e-mail" href="mailto:fanwelltechlabs@gmail.com" class="contact-item">
+    <i class="fas fa-envelope"></i>
+    <span >support@fanwelltechlabs.com</span>
+  </a>
+
+
 
   <a id="web" href="https://fanwelltechlabs.com" target="_blank" class="contact-item">
     <i class="fas fa-globe"></i>
