--- a/public/contact.html
+++ b/public/contact.html
@@ -31,13 +31,12 @@
     <div class="msg">
     <p style="color: rgb(5, 5, 5);">You Can leave us a message using the form below,your message is important to us and we will get back to you as soon as possible</p>
     </div>
-<form   class="contactform" id="contactForm"> 
-<input type="text" id="name" placeholder="Name" required>
-<input type="email" id="email" placeholder="Email" required>
-<textarea id="message" placeholder="Message"></textarea>
-<button type="submit">Send Message</button>
+<form id="contactForm" class="contactform">
+    <input type="text" id="name" name="name" placeholder=" Name" required>
+    <input type="email" id="email" name="email" placeholder=" Email" required>
+    <textarea id="message" name="message" placeholder="Message" required></textarea>
+    <button type="submit">Send Message</button>
 </form>
-   </section>
 
 
  <div class="contact-details"> 
