tweaked the email fowarding

--- a/public/contact.html
+++ b/public/contact.html
@@ -37,7 +37,7 @@
     <textarea id="message" name="message" placeholder="Message" required></textarea>
     <button type="submit">Send Message</button>
 </form>
-
+   </section>
 
  <div class="contact-details"> 
 <h3 class="cu" >Contact Us</h3>
