added linked in contact

--- a/public/index.html
+++ b/public/index.html
@@ -97,6 +97,12 @@ We combine creativity, structured engineering practices, and modern technologies
     <span>+260 966 056 238</span>
   </a>
 
+  <a  id="facebook" href="https://www.facebook.com/profile.php?id=61579282333893" target="_blank" class="contact-item">
+    <i class="fab fa-facebook"></i>
+    <span >Facebook</span>
+  </a>
+
+
   <a id="e-mail" href="mailto:fanwelltechlabs@gmail.com" class="contact-item">
     <i class="fas fa-envelope"></i>
     <span >info@fanwelltechlabs.com</span>
@@ -106,10 +112,10 @@ We combine creativity, structured engineering practices, and modern technologies
     <span  >fanwelltechlabs.com</span>
   </a>
 
-  <a  id="facebook" href="https://www.facebook.com/profile.php?id=61579282333893" target="_blank" class="contact-item">
-    <i class="fab fa-facebook"></i>
-    <span >Facebook</span>
-  </a>
+   <a href="https://www.linkedin.com/in/fanwell-mawele-ba63ba329/" target="_blank" title="Connect on LinkedIn" class="contact-item">
+    <i class="fab fa-linkedin-in"></i>
+    <span>LinkedIn</span>
+</a>
 
   <a id="location" href="https://www.google.com/maps?q=Kabwe,Zambia" target="_blank" class="contact-item">
     <i class="fas fa-location-dot"></i>
