--- a/public/contact.html
+++ b/public/contact.html
@@ -50,40 +50,43 @@
     <i class="fas fa-phone"></i>
     <span>+260 966 056 238</span>
   </a>
+<a  id="facebook" href="https://www.facebook.com/profile.php?id=61579282333893" target="_blank" class="contact-item">
+    <i class="fab fa-facebook"></i>
+    <span >Facebook</span>
+  </a>
   <a id="e-mail" href="mailto:fanwelltechlabs@gmail.com" class="contact-item">
     <i class="fas fa-envelope"></i>
     <span >info@fanwelltechlabs.com</span>
   </a>
-   <a id="e-mail" href="mailto:fanwelltechlabs@gmail.com" class="contact-item">
-    <i class="fas fa-envelope"></i>
-    <span >contact@fanwelltechlabs.com</span>
-  </a>
-
-   <a id="e-mail" href="mailto:fanwelltechlabs@gmail.com" class="contact-item">
+  <a id="e-mail" href="mailto:fanwelltechlabs@gmail.com" class="contact-item">
     <i class="fas fa-envelope"></i>
     <span >projects@fanwelltechlabs.com</span>
   </a>
-
-   <a id="e-mail" href="mailto:fanwelltechlabs@gmail.com" class="contact-item">
+  <a id="e-mail" href="mailto:fanwelltechlabs@gmail.com" class="contact-item">
     <i class="fas fa-envelope"></i>
     <span >support@fanwelltechlabs.com</span>
   </a>
-
-
+  <a id="e-mail" href="mailto:fanwelltechlabs@gmail.com" class="contact-item">
+    <i class="fas fa-envelope"></i>
+    <span >contact@fanwelltechlabs.com</span>
+  </a>
   <a id="web" href="https://fanwelltechlabs.com" target="_blank" class="contact-item">
     <i class="fas fa-globe"></i>
     <span  >fanwelltechlabs.com</span>
   </a>
 
-  <a  id="facebook" href="https://www.facebook.com/profile.php?id=61579282333893" target="_blank" class="contact-item">
-    <i class="fab fa-facebook"></i>
-    <span >Facebook</span>
-  </a>
+   <a href="https://www.linkedin.com/in/fanwell-mawele-ba63ba329/" target="_blank" title="Connect on LinkedIn" class="contact-item">
+    <i class="fab fa-linkedin-in"></i>
+    <span>LinkedIn</span>
+</a>
 
   <a id="location" href="https://www.google.com/maps?q=Kabwe,Zambia" target="_blank" class="contact-item">
     <i class="fas fa-location-dot"></i>
     <span>Kabwe, Zambia</span>
   </a>
+
+ 
+
   </div>
 </div>
 <footer>
